--- a/.github/workflows/HugoAction.yml
+++ b/.github/workflows/HugoAction.yml
@@ -42,5 +42,5 @@ jobs:
           publish_dir: ./public
           publish_branch: gh-pages
           force_orphan: true
-          cname: webstack-demo.weiyan.cc
+          cname: nav.wangying.me
           full_commit_message: ${{ github.event.head_commit.message }}
