--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -7,8 +7,8 @@
       logo: 语雀.webp
       url: https://www.yuque.com/
       description: 专业的云端知识库。
-    - title: QQ 邮箱
-      logo: qq邮箱.png
+    - title: Q 邮箱
+      logo: q邮箱.png
       url: http://mail.qq.com/
       description: 腾讯 QQ 邮箱。
     - title: 开源中国
