--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -40,6 +40,10 @@
       url: https://www.bioitee.com
       qrcode: qrcode.jpg
       description: 微信公众号：BioIT 爱好者！
+    - title: ChatGPT
+      logo: 关注.jpg
+      url: https://www.chatgpt.com
+      description: 微信公众号：BioIT 爱好者！
 
 
 - taxonomy: 科研办公
