--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -41,7 +41,7 @@
       qrcode: qrcode.jpg
       description: 微信公众号：BioIT 爱好者！
     - title: ChatGPT
-      logo: 关注.jpg
+      logo: chatgpt.png
       url: https://www.chatgpt.com
       description: 微信公众号：BioIT 爱好者！
 
