--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -37,7 +37,7 @@
       description: V2EX 创意工作者的社区。
     - title: DeepSeek
       logo: deepseek.png
-      url: https://www.chat.deepseek.com/
+      url: https://chat.deepseek.com/
       description: 探索未至之境。
     - title: ChatGPT
       logo: chatgpt.png
