--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -11,10 +11,10 @@
       logo: qq邮箱.png
       url: http://mail.qq.com/
       description: 腾讯 QQ 邮箱。
-    - title: 开源中国
-      logo: 开源中国.jpg
-      url: https://www.oschina.net/
-      description: 中文开源技术交流社区。
+    - title: Folo
+      logo: folo.ico
+      url: https://app.follow.is/
+      description: Follow everything in one place。
     - title: 公众号平台
       logo: 微信公众号.png
       url: https://mp.weixin.qq.com/
