--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -15,18 +15,18 @@
       logo: folo.ico
       url: https://app.follow.is/
       description: Follow everything in one place。
-    - title: 公众号平台
-      logo: 微信公众号.png
-      url: https://mp.weixin.qq.com/
-      description: 再小的个体也有自己的品牌。
+    - title: 文叔叔
+      logo: wenshushu.png
+      url: https://www.wenshushu.cn/
+      description: 传文件，找文叔叔。
     - title: GitHub
       logo: github.png
       url: https://github.com/
       description: GitHub 开源社区。
-    - title: 搜狗微信
-      logo: 搜狗微信.jpg
-      url: https://weixin.sogou.com/
-      description: 搜狗微信搜索，一搜即达。
+    - title: Apple Music
+      logo: applemusic.png
+      url: https://music.apple.com/
+      description: 一切尽在Apple Music。
     - title: 知乎
       logo: 知乎.png
       url: https://www.zhihu.com/
