--- a/config.toml
+++ b/config.toml
@@ -35,8 +35,8 @@ publishDir            = "public"				# 站点静态文件保存目录
 
 [params.images]
     favicon           = "assets/images/favicon1.png"
-    searchImageL      = "assets/images/bg-dna.jpg"		# 搜索部分浅色背景图
-    searchImageD      = "assets/images/bg-dna.jpg"		# 搜索部分深色背景图
+    searchImageL      = "assets/images/bg-image.jpg"		# 搜索部分浅色背景图
+    searchImageD      = "assets/images/bg-image.jpg"		# 搜索部分深色背景图
     logoExpandLight   = "assets/images/ico-expand-dark.png"
     logoExpandDark    = "assets/images/ico-expand-light.png"
     logoCollapseLight = "assets/images/favicon2.png"
