--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -560,6 +560,12 @@
 - taxonomy: 资讯学习
   icon: fas fa-pencil-alt fa-lg
   list: 
+    - term: 资讯新闻
+      links:
+        - title: BBC中文网
+          url: https://www.bbc.com/zhongwen/simp/
+          logo: bbcchinese.png
+          description: 面向全球华人的新闻网站。
     - term: 资讯书籍
       links:
         - title: 微信读书
