--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -578,6 +578,22 @@
           url: https://tw.yahoo.com/
           logo: yahoo.png
           description: 台湾多功能资讯平台。
+          - title: Reuters
+          url: https://www.reuters.com/
+          logo: reuters.png
+          description: 提供及时、准确的财经和综合新闻报道。
+        - title: The New York Times
+          url: https://www.nytimes.com/
+          logo: nytimes.png
+          description: 具有全球影响力的美国主流媒体。
+        - title: Yahoo香港
+          url: https://hk.news.yahoo.com/
+          logo: yahoo.png
+          description: 提供各类最新焦点及热门新闻。
+        - title: Yahoo奇摩
+          url: https://tw.yahoo.com/
+          logo: yahoo.png
+          description: 台湾多功能资讯平台。
     - term: 资讯书籍
       links:
         - title: 微信读书
