--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -32,7 +32,7 @@
       url: https://www.zhihu.com/
       description: 知乎社区。
     - title: 今日热榜
-      logo: tophub.jpg
+      logo: tophub.png
       url: https://tophub.today/
       description: 今日热榜提供各站热榜聚合。
     - title: DeepSeek
