--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -50,10 +50,10 @@
       #description: 微信公众号：BioIT 爱好者！
 
 
-- taxonomy: 科研办公
+- taxonomy: 日常生活
   icon: fas fa-flask fa-lg
   list:
-    - term: 生物信息
+    - term: 生活方式
       links:
         - title: NCBI
           logo: ncbi.jpg
@@ -79,7 +79,7 @@
           logo: bioconductor.jpg
           url: http://www.bioconductor.org/
           description: http://www.bioconductor.org
-    - term: 云服务器
+    - term: 资讯新闻
       links:
         - title: 阿里云
           logo: 阿里云.jpg
@@ -105,7 +105,59 @@
           logo: 青椒云.jpg
           url: https://www.qingjiaocloud.com/
           description: 云桌面,一站式云电脑服务平台。
-    - term: 办公学习
+    - term: 电子邮箱
+      links:
+        - title: NCBI
+          logo: ncbi.jpg
+          url: https://www.ncbi.nlm.nih.gov/
+          description: National Center for Biotechnology Information.
+        - title: Bioconda
+          logo: bioconda.jpg
+          url: https://anaconda.org/bioconda/
+          description: "Bioconda :: Anaconda.org."
+        - title: CPAN
+          logo: cpan.jpg
+          url: https://metacpan.org/
+          description: Search the CPAN.
+        - title: Galaxy Project
+          logo: galaxy_project.png
+          url: https://galaxyproject.org/
+          description: Galaxy Community Hub.
+        - title: R Project
+          logo: r-project.jpg
+          url: https://www.r-project.org/
+          description: https://www.r-project.org
+        - title: Bioconductor
+          logo: bioconductor.jpg
+          url: http://www.bioconductor.org/
+          description: http://www.bioconductor.org
+    - term: 云端硬盘
+      links:
+        - title: 阿里云
+          logo: 阿里云.jpg
+          url: https://www.aliyun.com/
+          description: 上云就上阿里云。
+        - title: 腾讯云
+          logo: 腾讯云.webp
+          url: https://cloud.tencent.com/
+          description: 产业智变，云启未来。
+        - title: 华为云
+          logo: 华为云.png
+          url: https://www.huaweicloud.com/
+          description: 提供云计算服务+智能，见未来-华为云。
+        - title: 云筏科技
+          logo: 云筏.png
+          url: https://www.cloudraft.cn/
+          description: 你的生信科研好选择。
+        - title: 极云普惠云电脑
+          logo: 极云普惠云电脑.png
+          url: https://www.ji-cloud.cn/
+          description: 云电脑-云游戏-手机变电脑软件。
+        - title: 青椒云
+          logo: 青椒云.jpg
+          url: https://www.qingjiaocloud.com/
+          description: 云桌面,一站式云电脑服务平台。
+    - term: 在线翻译
       links:
         - title: 有道词典
           logo: 有道词典.png
@@ -125,7 +177,7 @@
           description: 免费在线作图、实时协作。
         
 
-- taxonomy: 悠闲娱乐
+- taxonomy: 休闲娱乐
   icon: fas fa-film fa-lg
   list:
     - term: 影音视频
