--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -79,6 +79,16 @@
           logo: bioconductor.jpg
           url: http://www.bioconductor.org/
           description: http://www.bioconductor.org
+    - term: 社交媒体
+      links:
+        - title: 百度贴吧
+          logo: 百度贴吧.jpg
+          url: ttps://tieba.baidu.com/index.html
+          description: 百度贴吧。
+        - title: 小红书
+          logo: xiaohongshu.png
+          url: https://www.xiaohongshu.com/
+          description: 标记我的生活。
     - term: 资讯新闻
       links:
         - title: 阿里云
@@ -176,7 +186,7 @@
 - taxonomy: 休闲娱乐
   icon: fas fa-film fa-lg
   list:
-    - term: 影音视频
+    - term: 在线影视
       links:
         - title: 腾讯视频
           logo: 腾讯视频.png
@@ -202,7 +212,43 @@
           logo: 网易云音乐.jpg
           url: https://music.163.com/
           description: 163 网易云音乐。
-    - term: 社交媒体
+    - term: 在线音乐
+      links:
+        - title: 百度贴吧
+          logo: 百度贴吧.jpg
+          url: ttps://tieba.baidu.com/index.html
+          description: 百度贴吧。
+        - title: 小红书
+          logo: xiaohongshu.png
+          url: https://www.xiaohongshu.com/
+          description: 标记我的生活。
+    - term: 书籍下载
+      links:
+        - title: 腾讯视频
+          logo: 腾讯视频.png
+          url: http://v.qq.com/
+          description: 腾讯视频，海量视频在线观看。
+        - title: 优酷
+          logo: 优酷.png
+          url: http://www.youku.com/
+          description: 优酷 - 这个世界很酷。
+        - title: 爱奇艺
+          logo: 爱奇艺.png
+          url: https://www.iqiyi.com/
+          description: 爱奇艺在线视频。
+        - title: 哔哩哔哩
+          logo: 哔哩哔哩.png
+          url: https://www.bilibili.com/
+          description: Bilibili 视频弹幕网站。
+        - title: QQ 音乐
+          logo: QQ音乐.jpg
+          url: https://y.qq.com/
+          description: QQ 音乐，在线听歌。
+        - title: 网易云音乐
+          logo: 网易云音乐.jpg
+          url: https://music.163.com/
+          description: 163 网易云音乐。
+    - term: 日常摸鱼
       links:
         - title: 百度贴吧
           logo: 百度贴吧.jpg
