--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -51,7 +51,7 @@
 
 
 - taxonomy: 日常生活
-  icon: fas fa-flask fa-lg
+  icon: fas fa-home
   list:
     - term: 生活方式
       links:
@@ -638,7 +638,7 @@
 
 
 - taxonomy: 综合专栏
-  icon: fas fa-pencil-alt fa-lg
+  icon: fas fa-globe
   list: 
     - term: 资源搜索
       links:
@@ -717,7 +717,7 @@
 - taxonomy: 职场办公
   icon: fas fa-laptop
   list: 
-    - term: 资源搜索
+    - term: 摄影剪辑
       links:
         - title: 微信读书
           url: https://weread.qq.com/
@@ -727,7 +727,7 @@
           url: https://www.bookstack.cn/
           logo: 书栈网.jpg
           description: IT 互联网开源编程书籍免费阅读与下载。
-    - term: 博客论坛
+    - term: 新媒体运营
       links:
         - title: Inoreader
           url: https://www.inoreader.com/
@@ -749,44 +749,4 @@
           url: https://www.coolshell.cn/
           logo: ''
           description: 酷 壳 – CoolShell。
-    - term: 导航网站
-      links:
-        - title: Design Guidelines
-          url: http://designguidelines.co/
-          logo: designguidelines.png
-          description: Design Guidelines &mdash; The way products are built.
-        - title: Awesome design systems
-          url: https://github.com/alexpate/awesome-design-systems
-          logo: awesome_design_systems.png
-          description:  A collection of awesome design systems.
-        - title: Material Design
-          url: https://material.io/guidelines/
-          logo: Material_Design.png
-          description: Introduction - Material Design.
-        - title: Human Interface Guidelines
-          url: https://developer.apple.com/ios/human-interface-guidelines
-          logo: human_interface_guidelines.png
-          description: Human Interface Guidelines iOS.
-        - title: Photoshop Etiquette
-          url: http://viggoz.com/photoshopetiquette/
-          logo: photoshopetiquette.png
-          description: PS礼仪-WEB设计指南。
-    - term: 在线教育
-      links:
-        - title: Photoshop Lady
-          url: http://www.photoshoplady.com/
-          logo: PhotoshopLady.png
-          description: Your Favourite Photoshop Tutorials in One Place.
-        - title: doyoudo
-          url: http://doyoudo.com/
-          logo: doyoudo.png
-          description: 创意设计软件学习平台。
-        - title: 没位道
-          url: http://www.c945.com/web-ui-tutorial/
-          logo: web_ui_tutorial.png
-          description: WEB UI免费视频公开课。
-        - title: 慕课网
-          url: https://www.imooc.com/
-          logo: imooc.png
-          description: 程序员的梦工厂（有UI课程）。
         
