--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -727,7 +727,7 @@
           url: https://www.bookstack.cn/
           logo: 书栈网.jpg
           description: IT 互联网开源编程书籍免费阅读与下载。
-    - term: 新媒体运营
+    - term: 社媒运营
       links:
         - title: Inoreader
           url: https://www.inoreader.com/
