--- a/data/friendlinks.yml
+++ b/data/friendlinks.yml
@@ -1,6 +1,6 @@
-- title: NavPage 导航
-  url: https://github.com/NavPage
-  description: Navigation Page Themes
-- title: 维燕的知识花园
-  url: https://weiyan.cc/
+- title: 小颖的博客
+  url: https://blog.wangying.me
   description: 个人博客
+- title: 小颖的时光机
+  url: https://music.wangying.me/
+  description: 时光留声机
