--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -110,11 +110,11 @@
         - title: Reuters
           logo: reuters.png
           url: https://www.reuters.com/
-          description: 云电脑-云游戏-手机变电脑软件。
+          description: 全球领先的新闻通讯社。
         - title: 美国之音中文网
           logo: voa.jpg
           url: https://www.voachinese.com/
-          description: 云桌面,一站式云电脑服务平台。
+          description: 美国政府资助的国际广播机构。
     - term: 电子邮箱
       links:
         - title: NCBI
