--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -674,26 +674,26 @@
           description: 酷 壳 – CoolShell。
     - term: 导航网站
       links:
-        - title: Design Guidelines
-          url: http://designguidelines.co/
-          logo: designguidelines.png
-          description: Design Guidelines &mdash; The way products are built.
-        - title: Awesome design systems
-          url: https://github.com/alexpate/awesome-design-systems
-          logo: awesome_design_systems.png
-          description:  A collection of awesome design systems.
-        - title: Material Design
-          url: https://material.io/guidelines/
-          logo: Material_Design.png
-          description: Introduction - Material Design.
-        - title: Human Interface Guidelines
-          url: https://developer.apple.com/ios/human-interface-guidelines
-          logo: human_interface_guidelines.png
-          description: Human Interface Guidelines iOS.
-        - title: Photoshop Etiquette
-          url: http://viggoz.com/photoshopetiquette/
-          logo: photoshopetiquette.png
-          description: PS礼仪-WEB设计指南。
+        - title: 阿虚同学的储物间
+          url: https://axutongxue.com/
+          logo: axutongxue.png
+          description: 综合导航网站.
+        - title: 奇迹秀
+          url: https://www.qijishow.com/
+          logo: qijixui.jpg
+          description:  设计师导航网站.
+        - title: 后期狗
+          url: http://houqigo.com/
+          logo: houqigou.png
+          description: 剪辑师导航网站.
+        - title: AI工具集
+          url: https://ai-bot.cn/
+          logo: aigongjuji.png
+          description: AI导航网站.
+        - title: 数字移民导航
+          url: https://www.shuziyimin.org/
+          logo: shuziyimin.jpg
+          description: 数字移民。
     - term: 在线教育
       links:
         - title: Photoshop Lady
