--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -186,14 +186,14 @@
           logo: 哔哩哔哩.png
           url: https://www.bilibili.com/
           description: Bilibili 视频弹幕网站。
-        - title: QQ 音乐
-          logo: QQ音乐.jpg
-          url: https://y.qq.com/
-          description: QQ 音乐，在线听歌。
-        - title: 网易云音乐
-          logo: 网易云音乐.jpg
-          url: https://music.163.com/
-          description: 163 网易云音乐。
+        - title: 厂长资源
+          logo: czzy.png
+          url: https://www.czzy77.com/
+          description: 豆瓣Top250。
+        - title: 低端影视
+          logo: ddys.png
+          url: https://ddys.pro/
+          description: https://ddys.pro/。
     - term: 在线音乐
       links:
         - title: 百度贴吧
