--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -163,6 +163,10 @@
           logo: 坚果云.png
           usrl: https://www.jianguoyun.com/
           description: 坚果云官网。
+        - title: 蓝奏云
+          logo: 蓝奏云盘.png
+          usrl: https://www.lanzou.com/
+          description: https://www.lanzou.com/
         - title: pCloud
           logo: pcloud.png
           usrl: https://www.pcloud.com/
