--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -230,6 +230,16 @@
           logo: 哔哩哔哩.png
           url: https://www.bilibili.com/
           description: Bilibili 视频弹幕网站。
+    - term: 趣味休闲
+      links:
+        - title: 百度贴吧
+          logo: 百度贴吧.jpg
+          url: ttps://tieba.baidu.com/index.html
+          description: 百度贴吧。
+        - title: 小红书
+          logo: xiaohongshu.png
+          url: https://www.xiaohongshu.com/
+          description: 标记我的生活。
     - term: 日常摸鱼
       links:
         - title: 百度贴吧
