--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -155,6 +155,10 @@
           logo: 阿里云盘.png
           url: https://www.aliyundrive.com/
           description: 阿里云盘，你的数字世界。
+        - title: iCloud
+          logo: iCloud.png
+          url: https://www.icloud.com.cn/
+          description: iCloud云上贵州。
         - title: 天翼云盘
           logo: 天翼云盘.jpg
           url: https://cloud.189.cn/
@@ -216,6 +220,14 @@
           logo: 网易云音乐.jpg
           url: https://music.163.com/
           description: 163 网易云音乐。
+        - title: Spotify
+          logo: spotify.png
+          url: https://spotify.com/
+          description: Music for everyone.
+        - title: Apple Music
+          logo: applemusic.png
+          url: https://music.apple.com/
+          description: 一切尽在Apple Music。
         - title: Alger Music Player
           logo: 网抑云.png
           url: http://mc.alger.fun/
